--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "mongoose": "^5.9.27",
     "winston": "^3.3.3"
   }
 }
