--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0"
   }
 }
