--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test && npx mocha src/test/**/*.test.js"    
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^7.6.0"
+    "eslint": "^7.6.0",
+    "mocha": "^8.1.1"
   }
 }
