--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "export NODE_ENV=test && npx mocha src/test/**/*.test.js"    
+    "test": "export NODE_ENV=test && npx mocha src/test/**/*.test.js --exit"    
   },
   "repository": {
     "type": "git",
