--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,13 @@
 		"browser": true,
 		"commonjs": true,
 		"es6": true,
-		"node": true
+		"node": true,
+		"mocha": true
 	},
-	"extends": "eslint:recommended",
+	"extends": [
+		"eslint:recommended",
+		"plugin:mocha/recommended"
+	  ],
 	"globals": {
 		"Atomics": "readonly",
 		"SharedArrayBuffer": "readonly",
@@ -14,5 +18,10 @@
 	"parserOptions": {
 		"ecmaVersion": 2018
 	},
-	"rules": {}
+	"plugins": [
+		"mocha"
+	  ],
+	"rules": {
+		"mocha/no-exclusive-tests": "error"
+	}
 }
