--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "export NODE_ENV=test && npx mocha src/test/**/*.test.js --exit"    
+    "test": "export NODE_ENV=test && npx mocha src/test/**/*.test.js --exit"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "eslint": "^7.6.0",
+    "eslint-plugin-mocha": "^7.0.1",
+    "expect": "^26.2.0",
     "mocha": "^8.1.1"
   }
 }
