--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/brasenna/loja_api#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "helmet": "^4.0.0",
     "mongoose": "^5.9.27",
     "winston": "^3.3.3"
   },
