--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "config": "^3.3.1",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.27",
     "winston": "^3.3.3"
   },
@@ -30,6 +31,7 @@
     "eslint": "^7.6.0",
     "eslint-plugin-mocha": "^7.0.1",
     "expect": "^26.2.0",
-    "mocha": "^8.1.1"
+    "mocha": "^8.1.1",
+    "supertest": "^4.0.2"
   }
 }
