--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "export NODE_ENV=prod && node src/server.js",
     "nodemon": "npx nodemon src/server.js",
     "test": "export NODE_ENV=test && npx mocha src/test/**/*.test.js --exit"
   },
