--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/brasenna/loja_api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "config": "^3.3.1",
     "cors": "^2.8.5",
