--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.27",
     "winston": "^3.3.3"
