--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "export NODE_ENV=prod && node src/server.js",
+    "dev": "node src/server.js",
     "nodemon": "npx nodemon src/server.js",
     "test": "export NODE_ENV=test && npx mocha src/test/**/*.test.js --exit"
   },
