--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.27",
+    "mongoose-sequence": "^5.2.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
